--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         <title>Snake Game</title>
     </head>
     <body>
-        <h1>Snake Game!</h1>
+        <h1>SNAKE GAME!</h1>
         <canvas id="snake" width="512" height="512"></canvas>
     </body>
 </html>
